fix: reduce gap on mobile view

--- a/blocks/menu/__container/menu__container.css
+++ b/blocks/menu/__container/menu__container.css
@@ -27,6 +27,6 @@
     flex-direction: column-reverse;
     justify-content: flex-start;
     align-items: flex-start;
-    gap: 151px;
+    gap: 30px;
   }
 }
